# wui

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: color.rs  geometry.rs  main.rs  scene.rs
src/renderer/: context.rs  gpu_vec.rs  mod.rs  pipelines.rs  shader.wgsl
